@@ -21,7 +21,8 @@ Nedko Arnaudov
 
 2008-03-13 Stephane Letz  <letz@grame.fr>
 		
-	* Add test for jack_cycle_wait, jack_cycle_wait and jack_set_process_callback API.
+	* Add test for jack_cycle_wait, jack_cycle_wait and jack_set_process_thread API.
+	* Add jack_set_process_thread in wrapper library.
 
 2008-03-12 Stephane Letz  <letz@grame.fr>
 		
